--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 	"browser_action": {
 		"default_icon": "icons/i48a.png",
 		"default_title": "Genshin Check-In Helper",
-		"default_popup": "popup.html"
+		"default_popup": "popup/popup.html"
 	},
 	"permissions": [
 		"https://hk4e-api-os.mihoyo.com/event/*",
