Reupload (manual rebuild) >>add chrome polyfill
----
NOTE (untested): npm install was called at the time of this commit; installed packages might differ from the original project before re-upload

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 		"256": "icons/256.png"
 	},
 	"background": {
-		"scripts": ["background.js"],
+		"scripts": ["background.js", "node_modules/webextension-polyfill/dist/browser-polyfill.min.js"],
 		"persistent": true
 	},
 	"browser_action": {
