--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,7 @@
 	"permissions": [
 		"https://hk4e-api-os.mihoyo.com/event/*",
 		"http://localhost:3000/*",
-		"alarms"
+		"alarms",
+		"storage"
 	]
 }
