Reupload (manual rebuild) >>Attempt to read headers through webRequest permission
----
manual rebuild ends at this commit
NOTE: this feature was considered unsuccessful in the original project, and may contain debugging information unfit for release (i.e. usage of <all_urls>)

--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,8 @@
 		"https://hk4e-api-os.mihoyo.com/event/*",
 		"http://localhost:3000/*",
 		"alarms",
-		"storage"
+		"storage",
+		"webRequest",
+		"webRequestBlocking"
 	]
 }
